Bug 468458 - Events are capped at 5 per day and show a random assortment when the day has more than 5 events
Summary: Events are capped at 5 per day and show a random assortment when the day has ...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Digital Clock widget (other bugs)
Version First Reported In: 5.27.4
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 443850 481899 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-04-13 08:17 UTC by Dominique Hummel
Modified: 2024-10-16 14:44 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3
Sentry Crash Report:


Attachments
patch to increase the limit, see comment for source (504 bytes, patch)
2023-11-30 09:57 UTC, malvin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dominique Hummel 2023-04-13 08:17:07 UTC
SUMMARY
Events in the calendar plasmoid are capped at 5 per day. This is problematic for days with more than 5 events, since the calendar does NOT show the first 5 events, but rather selects 5 events to display at random.


STEPS TO REPRODUCE
1. Create more than 5 events for a single day in Kalendar
2. Verify that all events are displayed in the calendar plasmoid with PIM enabled

OBSERVED RESULT
Calendar plasmoid only shows 5 events (picked at random)

EXPECTED RESULT
Calendar plasmoid shows all events

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Gentoo
(available in About System)
KDE Plasma Version: 5.27.4
KDE Frameworks Version: 5.104.0
Qt Version: 5.15.8

ADDITIONAL INFORMATION
-
Comment 1 Grósz Dániel 2023-08-31 23:43:36 UTC
It's reasonable that the calendar only shows a limited number of dots per day (tough there would be other options, like shrinking the dots or displaying a number if there are many), but the event list should show all events.
Comment 2 malvin 2023-11-30 09:56:33 UTC
This seems to be the same bug as this one: https://bugs.kde.org/show_bug.cgi?id=443850

I find this limit dangerous, it can make you miss an appointment if you are not aware of it ;-)

A patch increasing the limit is here https://github.com/voncloft/Voncloft-OS/blob/master/REPOS/plasma/plasma-workspace/event.patch - and also attached.

What are the reasons for the limit? Is it because this is also the limit of dots to be drawn? How hard is it to have different limits for the dots and entries?
Comment 3 malvin 2023-11-30 09:57:12 UTC
Created attachment 163642 [details]
patch to increase the limit, see comment for source
Comment 4 malvin 2023-11-30 09:58:32 UTC
*** Bug 443850 has been marked as a duplicate of this bug. ***
Comment 5 Nate Graham 2023-11-30 20:23:08 UTC
Please feel free to submit that patch formally! Patches in bug reports tend to get lost.
Comment 6 Nate Graham 2024-02-27 20:08:53 UTC
*** Bug 481899 has been marked as a duplicate of this bug. ***
Comment 7 produnis 2024-02-27 21:01:33 UTC
I opened a merge request here: https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3979
Comment 8 Bug Janitor Service 2024-10-10 12:07:31 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4818
Comment 9 Nate Graham 2024-10-16 14:44:49 UTC
Git commit a0e310b92537c4d2fd315871634c92c1c0e440fc by Nate Graham, on behalf of Tino Lorenz.
Committed on 16/10/2024 at 14:44.
Pushed by ngraham into branch 'master'.

applets/digitalclock: remove daily event cap

This removes the daily event cap from the calendar's DaysModel so all
events are shown in the event list. To avoid overflowing the calendar
grid, individual dots are only shown for <=3 events; beyond that, a
little bar is shown instead.
FIXED-IN: 6.3

M  +2    -20   components/calendar/daysmodel.cpp
M  +11   -0    components/calendar/qml/DayDelegate.qml

https://invent.kde.org/plasma/plasma-workspace/-/commit/a0e310b92537c4d2fd315871634c92c1c0e440fc