applets/digitalclock: remove daily event cap

This removes the daily event cap from the calendar's DaysModel so all
events are shown in the event list. To avoid overflowing the calendar
grid, individual dots are only shown for <=3 events; beyond that, a
little bar is shown instead.

BUG: 468458
FIXED-IN: 6.3